Fix images on safari

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -46,10 +46,15 @@
   .all-over-the-place-cover {
     transform: rotateZ(-3deg);
 
-    img {
+    picture {
       position: absolute;
       top: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
+    }
+
+    img {
       width: 100%;
       height: 100%;
       object-fit: cover;
